# CCvGEN

./: .eslintrc.js  .gitignore  .taurignore  README.md  build.bat  build.sh  cleanup.sh  convert-icon.html  index.html  jest.config.js  package-lock.json  package.json  start.sh  stop.sh  tsconfig.json  vite.config.ts
src/: App.tsx  test-setup.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src/api/: api-factory.ts  base-api.ts  claude-api.ts  gemini-api.ts  index.ts  local-llm-api.ts  openai-api.ts
src/api/__tests__/: api-factory-simple.test.ts
src/components/Layout/: Header.tsx  Layout.tsx
src/components/Settings/: Settings.tsx
src/components/Steps/: APISetup.tsx  index.ts
src/components/Workflow/: FiveStageWorkflow.tsx
src/core/: five-stage-workflow.ts  index.ts
src/stores/: app-store.ts
src/styles/: five-stage-workflow.css  main.css
src/types/: api.ts  character-card.ts
src/utils/: charx-exporter.ts  dynamic-asset-renamer.ts  file-rename-manager.ts  index.ts  local-storage.ts  logger.ts
