[package]
name = "ccvgen"
version = "1.0.0"
description = "RISU AI Character Card Generator with Five Stage Workflow"
authors = ["CCvGEN Team"]
license = "MIT"
repository = ""
default-run = "ccvgen"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0", features = [] }

[features]
custom-protocol = [ "tauri/custom-protocol" ]
